--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
